# polyclinic

./: .gitignore  README.md  docker-compose.yml
client/: package-lock.json  package.json  tailwind.config.js
client/src/: App.tsx  index.tsx  tailwindcss.css  themes.tsx
client/src/components/: AppointmentForm.tsx  DoctorProfile.tsx  LoginForm.tsx  RegistrationForm.tsx  TopBar.tsx
client/src/http/: index.ts
client/src/models/: Meet.ts  User.ts
client/src/models/response/: AuthResponce.ts
client/src/services/: AuthService.ts  UserService.ts
client/src/store/: store.ts
server/: Dockerfile  alembic.ini  config.py  main.py  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 01db30e0aa02_diagnose.py  16c009fdf67b_meeting_up.py  1a90fce1ecda_meeting.py  3cbab73361e9_meeting_doctor_username.py  58f7d9386e12_user.py  722e7e06dde9_note.py  aaed290fcaa1_init.py
server/app/: dal.py
server/app/actions/: meet.py
server/app/diagnoses/: model.py  repository.py  router.py  schemas.py
server/app/meetings/: model.py  repository.py  router.py  schemas.py  service.py
server/app/models/: meet.py  note.py
server/app/notes/: model.py  repository.py  router.py
server/app/repository/: diagnose.py  meet.py  notes.py
server/app/router/: diagnose.py  meet.py  note.py
server/app/schemas/: diagnose.py  meet.py  note.py
server/auth/: README_AUTH.md  hashing.py  models.py  repository.py  router.py  schema.py  security.py  service.py  test.py
server/tests/: auth_test.py  conftest.py  service_test.py
